# Crossword

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
backend/: Dockerfile  game_data.json  main.py  pyproject.toml
backend/src/: main.py
backend/src/api/routes/: game_routes.py  websocket_routes.py
backend/src/core/: database.py  player.py
backend/src/core/game_modes/: base_game.py  coop_game.py  normal_game.py
backend/src/crud/: game_crud.py
backend/src/models/: game.py
backend/src/services/: game_manager.py  websocket_manager.py
backend/src/utils/: grid_def_order.json  normalize.py
db/: init.sql
frontend/: Dockerfile  index.html  package.json  vite.config copy.js  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: CrosswordGridDisplay.jsx  GridDisplay.css  PlayerProgress.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/pages/: CrosswordPage.jsx
frontend/src/utils/: apiUtils.js  gridUtils.js
