[project]
name = "backend"
version = "0.1.0"
description = "hehehe"
authors = [
    {name = "Modzol and co"}
]
license = {text = "WTFPL"}
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]
package-mode = false

[tool.poetry.scripts]
start = "main:run_app"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
