[tool.poetry]
name = "crossword_backend"  # Underscores only, no hyphens
version = "0.1.0"
description = "hehehe"
authors = ["Modzol and co"]
license = "WTFPL"
package-mode = false
packages = [{ include = "src", from = "." }]  # Explicit package location

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.2,<0.35.0"
gunicorn = ">=23.0.0,<24.0.0"

[tool.poetry.scripts]
start = "src.main:run_app"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

