[tool.poetry]
name = "crossword_backend"  # Underscores only, no hyphens
version = "0.1.0"
description = "Crossword site backend"
authors = ["Modzol and co"]
license = "WTFPL"
package-mode = false
packages = [{ include = "src", from = "." }]  # Explicit package location

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
gunicorn = ">=23.0.0,<24.0.0"
wsproto = "^1.2.0"
websockets = "^15.0.1"
sqlalchemy = "^2.0.41"
asyncpg = "^0.30.0"
databases = "^0.9.0"
psycopg2-binary = "^2.9.10"

[tool.poetry.scripts]
start = "src.main:run_app"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

